# ai-meeting-notes

./: .gitignore  README.md  config.yaml  localwhispr.service  pyproject.toml  visionflow.service
localwhispr/: __init__.py  __main__.py  ai_cleanup.py  audio_monitor.py  config.py  ctl.py  hotkeys.py  meeting.py  meeting_processor.py  notifier.py  overlay.py  recorder.py  screenshot.py  server.py  shortcuts.py  transcriber.py  typer.py
visionflow/: __init__.py  __main__.py  ai_cleanup.py  config.py  ctl.py  hotkeys.py  meeting.py  meeting_processor.py  notifier.py  recorder.py  screenshot.py  server.py  shortcuts.py  transcriber.py  typer.py
