[project]
name = "visionflow"
version = "0.1.0"
description = "Ditado por voz multimodal com IA para Linux (GNOME Wayland). Combina faster-whisper CUDA + Ollama + screenshot multimodal."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "Pillow>=10.0",
    "numpy>=1.26.0",
]

[project.scripts]
visionflow = "visionflow.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["visionflow"]
